upgrade to spring boot 3